Fixed too long file name in map's info-window (#74)

--- a/src/webserver/private/less/main.less
+++ b/src/webserver/private/less/main.less
@@ -96,6 +96,7 @@ hr {
 		}
 
 		.content {
+			max-width: 20em;
 			padding-left: 0.5em;
 
 			ul {
@@ -104,6 +105,7 @@ hr {
 
 			button {
 				width: 100%;
+				display: block;
 			}
 		}
 	}
